# skim

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  client.hpp  config.cpp  config.hpp  keymap.cpp  keymap.hpp  main.cpp  tab.cpp  tab.hpp  webview.cpp  webview.hpp  window.cpp  window.hpp
